[package]
name = "schedin-server"
description = "Distributed Job Scheduling with Automatic Infrastructure Management"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4.0", features = [
    "macros",
    "rustls",
], default-features = false }
base64 = { version = "0.21.4", default-features = false }
futures = { version = "0.3.28", default-features = false }
hex = { version = "0.4.3", default-features = false }
jsonwebtoken = { version = "8.3.0", default-features = false }
rustls = { version = "0.20.7", default-features = false }
rustls-pemfile = { version = "1.0.3", default-features = false }
serde = { version = "1.0.188", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sqlx = { version = "0.7", features = [
    "macros",
    "migrate",
    "postgres",
    "runtime-async-std",
    "time",
    "uuid",
], default-features = false }
time = { version = "0.3.29", default-features = false }
uuid = { version = "1.4.1", features = ["v4"], default-features = false }
validator = { version = "0.16.1", features = [
    "derive",
], default-features = false }
